--- a/shell/src/app/settings/settings-view/settings.scss
+++ b/shell/src/app/settings/settings-view/settings.scss
@@ -15,6 +15,12 @@
  * limitations under the License.
  */
 
+:host {
+  display: block;
+  height: 100%;
+  overflow-y: auto;
+}
+
 .settings-container {
   padding: 24px;
   max-width: 600px;
